--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/material": "^6.3.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "css-select": "^4.3.0",
     "d3": "^7.9.0",
